# Mondrian-Blocks

./: .gitignore  CMakeLists 2.txt  CMakeLists.txt  CPP-Exam.drawio  README.md  TODO.txt  UML-Diagramm.drawio
raylib-master/: CMakeLists.txt
raylib/cmake/: InstallConfigurations.cmake
raylib/examples/: CMakeLists.txt
raylib/src/: CMakeLists.txt
src/: Block.cpp  Board.cpp  Board.hpp  Constants.hpp  Game.cpp  Game.hpp  PlayBlock.cpp  main.cpp
src/Block/: Block.cpp  Block.hpp  Block_old.cpp  Block_old.hpp
src/Block/PlayBlock/: PlayBlock.cpp  PlayBlock.hpp
src/Block/StartBlock/: StartBlock.cpp  StartBlock.hpp
src/Board/: Board.cpp  Board.hpp
src/GUI/: GUI.cpp  GUI.hpp
src/Game/: Game.cpp  Game.hpp
src/PlayBlock/: PlayBlock.hpp
src/Solver/: Solver.cpp  Solver.hpp
src/StartBlock/: StartBlock.cpp
test/: CMakeLists.txt  test.cpp
